@@ -1,6 +1,7 @@
 {{$NEXT}}
    - added import of normalize_args in ::Plugin::Util
    - set right place for interlude when printing
+   - added test file for ::Util::Output
 
 0.721  2016-04-01 22:13:50 CEST
    - upped minimum version of Log::Log4perl::Tiny for LEVELID_FOR
